@@ -3,7 +3,11 @@
 
 SUBDIRS = src \
     po \
-    man
+    man \
+    doc
+
+pkgdata_DATA = xvidcap.desktop \
+	xvidcap.png
 
 xvidcapdocdir = ${prefix}/doc/xvidcap
 xvidcapdoc_DATA = \
@@ -18,7 +22,8 @@ EXTRA_DIST = $(xvidcapdoc_DATA) \
     autogen.sh \
     intltool-extract.in \
     intltool-merge.in \
-    intltool-update.in
+    intltool-update.in 
+# FIXME: do I need to add xvidcap.desktop and xvidcap.png to extra_dist even if they are in pkgdatadir_DATA?
 
 # Copy all the spec files. Of cource, only one is actually used.
 dist-hook:
@@ -34,4 +39,13 @@ dist-hook:
     ( cd $(distdir)/ffmpeg/ && $(MAKE) distclean ) || ( echo "FAILED TO DISTCLEAN FFMPEG" && exit ) ; \
     ( test -f $(distdir)/ffmpeg/config.log && rm $(distdir)/ffmpeg/config.log ) || echo "no ffmpeg config.log"
 
+install-exec-hook:
+	mkdir $(datadir)/pixmaps ; \
+	cp $(top_srcdir)/xvidcap.png $(datadir)/pixmaps/ ; \
+	mkdir $(datadir)/applications ; \
+	cp $(top_srcdir)/xvidcap.desktop $(datadir)/applications/
+
+uninstall-hook:
+	rm $(datadir)/pixmaps/xvidcap.png ; \
+	rm $(datadir)/applications/xvidcap.desktop
 
