@@ -1,7 +1,7 @@
 Source: xvidcap
 Section: x11
 Priority: optional
-Maintainer: Christian Marillat <marillat@debian.org>
+Maintainer: Karl H. Beckers <karl.h.beckers@gmx.net>
 Standards-Version: 3.6.1
 Build-Depends: debhelper (>> 3.3.4), libgtk2.0-dev,
  libmp3lame-dev
