@@ -1,4 +1,4 @@
-This package was debianized by Christian Marillat <marillat@debian.org> on
+This package was originally debianized by Christian Marillat <marillat@debian.org> on
 Sun,  1 Jul 2001 17:46:17 +0200.
 
 It was downloaded from http://xvidcap.sourceforge.net/
