@@ -1,0 +1,8 @@
+#! /bin/sh
+
+set -e
+
+# unregister docbook docs with scrollkeeper
+if [ "$1" = "configure" ]; then
+    scrollkeeper-update -q
+fi
