@@ -8,7 +8,8 @@
         Purpose of the document follows.
 -->
 
-<!DOCTYPE article  PUBLIC "PUBLIC:-//OASIS//DTD DocBook XML V4.4//EN" "null" [
+<!DOCTYPE article  PUBLIC "PUBLIC:-//OASIS//DTD DocBook XML V4.4//EN" 
+	"http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd" [
   <!ENTITY appversion "1.1.4">
   <!ENTITY manrevision "0.1">
   <!ENTITY date "September 2006">
