@@ -3,8 +3,7 @@
 ## Created by Anjuta
 
 gladedir = $(datadir)/xvidcap/glade
-glade_DATA = gnome-xvidcap.glade \
-    pixmaps/xvidcap_logo.png
+glade_DATA = gnome-xvidcap.glade 
 
 INCLUDES = \
 	-DPACKAGE_LOCALE_DIR=\""$(prefix)/$(DATADIRNAME)/locale"\" \
