@@ -1,4 +1,13 @@
 
+2006-09-19  Karl H. Beckers  <karl.h.beckers@gmx.net>
+	* configure.in, doc/xvidcap-manual/C: xvidcap-manual.xml, 
+	  xvidcap-manual-C.omf:
+		various modifications to make docbooks work and register
+		with scrollkeeper
+	* xvidcap.png, xvidcap.desktop, Makefile.am, 
+	  debian: xvidcap.menu, postinst, postrm: various
+		updates to create menu entries
+
 2006-09-17  Karl H. Beckers  <karl.h.beckers@gmx.net>
 	* doc/*: initial import of xvidcap online docs
 
